<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.chose_lvl.ChoseLvlFragment">

    <ImageView
        android:id="@+id/btnChoseLvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        android:src="@drawable/btn_chose_lvl"
        />

    <TextView
        android:id="@+id/tvDifficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/btnChoseLvl"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="50dp"
        style="@style/my_text_style" />

    <TextView
        android:id="@+id/btnEasy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintDimensionRatio="315:86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnMiddle"
        android:layout_marginBottom="20dp"
        style="@style/my_text_style"
        android:text="@string/easy"
        android:gravity="center"
        android:textSize="45dp"
        android:background="@drawable/btn_yellow_bckgr"
        />

    <TextView
        android:id="@+id/btnMiddle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintDimensionRatio="315:86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/my_text_style"
        android:text="@string/middle"
        android:gravity="center"
        android:textSize="45dp"
        android:background="@drawable/btn_yellow_bckgr"
        />

    <TextView
        android:id="@+id/btnHard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintDimensionRatio="315:86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMiddle"
        android:layout_marginTop="20dp"
        style="@style/my_text_style"
        android:text="@string/hard"
        android:gravity="center"
        android:textSize="45dp"
        android:background="@drawable/btn_yellow_bckgr"
        />

    <TextView
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintDimensionRatio="315:86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        style="@style/my_text_style"
        android:text="@string/start"
        android:gravity="center"
        android:textSize="45dp"
        android:background="@drawable/btn_red_bckgr"
        />

</androidx.constraintlayout.widget.ConstraintLayout>