<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.start.StartGameFragment">

    <ImageView
        android:id="@+id/btnRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/btn_rules"
        android:layout_margin="15dp"
        />

    <ImageView
        android:id="@+id/btnSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/btnRules"
        app:layout_constraintBottom_toBottomOf="@id/btnRules"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/btn_settings"
        android:layout_marginEnd="15dp"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/btnSettings"
        app:layout_constraintBottom_toTopOf="@id/btnPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="50dp"
        style="@style/my_text_style" />

    <TextView
        android:id="@+id/btnPlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintDimensionRatio="352:101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnExit"
        android:layout_marginBottom="20dp"
        style="@style/my_text_style"
        android:text="@string/play"
        android:gravity="center"
        android:textSize="50dp"
        android:background="@drawable/btn_yellow_bckgr"
        />

    <TextView
        android:id="@+id/btnExit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintDimensionRatio="352:101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        style="@style/my_text_style"
        android:text="@string/exit"
        android:gravity="center"
        android:textSize="50dp"
        android:background="@drawable/btn_red_bckgr"
        />

</androidx.constraintlayout.widget.ConstraintLayout>