<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.settings.SettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <ImageView
        android:id="@+id/btnChoseLvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        android:src="@drawable/btn_chose_lvl"
        />

    <TextView
        android:id="@+id/tvOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnChoseLvl"
        android:layout_marginTop="40dp"
        style="@style/my_text_style"
        android:text="@string/options"
        android:textSize="60dp"
        />

    <ImageView
        android:id="@+id/btnVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvVolume"
        android:src="@drawable/sound_on"
        />

    <TextView
        android:id="@+id/tvVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/hor50"
        android:layout_marginBottom="15dp"
        style="@style/my_text_style"
        android:text="@string/volume"
        android:textSize="20dp"
        />

    <ImageView
        android:id="@+id/btnSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hor50"
        android:layout_marginTop="15dp"
        android:src="@drawable/sound_on"
        />

    <TextView
        android:id="@+id/tvSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSound"
        style="@style/my_text_style"
        android:text="@string/sound"
        android:textSize="20dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>